kenzo: Enable the Pinner Service for pinning files into memory
* Pin key files into memory to prevent having to fetch from flash
  after boot. Improves system performance by preventing page cache
  thrash. Retrieves files from a device-specific overlay to allow
  specialization.

Change-Id: I53f8227c66c44d3955422b41d623e450ec2be421

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -353,4 +353,12 @@
 
     <!-- Operating volatage for bluetooth controller. 0 by default-->
     <integer translatable="false" name="config_bluetooth_operating_voltage_mv">3300</integer>
+
+    <!-- Default list of files pinned by the Pinner Service -->
+    <string-array translatable="false" name="config_defaultPinnerServiceFiles">
+        <item>"/system/framework/arm64/boot-framework.oat"</item>
+        <item>"/system/framework/oat/arm64/services.odex"</item>
+        <item>"/system/framework/arm64/boot.oat"</item>
+        <item>"/system/framework/arm64/boot-core-libart.oat"</item>
+   </string-array>
 </resources>
